# babynaps

./: README.md
.github/: FUNDING.yml
back/: Procfile  app.py  definitions.py  helper.py  pyproject.toml
back/baby/: Baby.py
back/schedule/: Schedule.py
back/schedule/reference/: 03.json  05.json  06.json  07.json  12.json  14.json  19.json  24.json  4.json  9.json
back/tests/: __init__.py  test_back.py  test_calculateAge.py
back/tests/Baby/: __init__.py  test_calculateAge.py  test_generateCycles.py  test_getReference.py
back/tests/Baby/expectedOutput/: 03.json  04.json  05.json  06.json  07.json  09.json  12.json  14.json  19.json  24.json
front/: README.md  cypress.json  nuxt.config.js  package-lock.json  package.json
front/assets/: variables.scss
front/components/napSchedule/: Cycle.vue  NapChart.json  NapChart.vue  Schedule.vue
front/cypress/fixtures/: getSchedule200_6month.json  schedule6MonthOld.json
front/cypress/integration/: app.scripts.js  app.spec.js  e2e.spec.js  schedule.spec.js
front/cypress/integration/components/: schedule.scripts.js  schedule.spec.js
front/cypress/integration/pages/: app.scripts.js  app.spec.js  schedule.scripts.js  schedule.spec.js
front/cypress/plugins/: index.js
front/cypress/support/: index.js  utils-schedule.js  utils.js
front/cypress/support/tests/: schedule.js
front/layouts/: default.vue
front/mixins/: mixins.js
front/models/: Baby.js
front/pages/: index.vue  schedule.vue
front/store/: index.js  store.js
