[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Pax <pax.margret@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.5"
gunicorn = "^20.0.4"
python-dateutil = "^2.8.1"
flask-cors = "^3.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
freezegun = "^0.3.15"
python-dotenv = "^0.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"